--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fullcalendar/timegrid": "^6.1.17",
     "@fullcalendar/vue3": "^6.1.17",
     "@vitejs/plugin-vue": "^5.2.4",
+    "@vueuse/core": "^13.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "vue": "^3.4.27",
     "vue-cal": "^4.10.2",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
