--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@vitejs/plugin-vue": "^5.2.4",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.10.0",
+    "country-state-city": "^3.2.1",
     "pinia": "^3.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "vue": "^3.4.27",
     "vue-cal": "^4.10.2",
+    "vue-country-region-select": "^2.0.16",
     "vue-router": "^4.3.3",
     "vuedraggable": "^4.1.0"
   },
